Issue #2
BUG: jqueryui.datepicker appears under nav-bar

#ui-datepicker-div { z-index: 900; }

--- a/css/ccg.css
+++ b/css/ccg.css
@@ -254,6 +254,7 @@ footer.container {
 label { text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff; }
 
 .ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year { color: #000; }
+#ui-datepicker-div { z-index: 900; }
 
 #admin_nav ul { display: inline-block; }
 
